@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.7
-Date: 2023-03-23
+Date: 2023-03-24
   Fixes:
     - Compatibility fixes for some loadouts
+    - Fix silicon in CPUs in some loadouts
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.6
 Date: 2023-03-22
